# DavisMarginIQ

./: DATA_INGEST_LOG.md  HANDOFF.md  MarginIQ.jsx  README-payroll.md  firestore.rules  netlify.toml  package.json  storage.rules
.github/workflows/: deploy-firebase-rules.yml  weekly-scrape.yml
netlify/edge-functions/: auth-gate.ts
netlify/functions/: marginiq-ai-analyze.mts  marginiq-analyze-timeclock.mts  marginiq-audit-purge.mts  marginiq-audit-rebuild-background.mts  marginiq-audit-rebuild.mts  marginiq-audit-trace.mts  marginiq-b600-timeclock.mts  marginiq-backup-run-background.mts  marginiq-backup.mts  marginiq-data-inventory-background.mts  marginiq-data-inventory.mts  marginiq-ddis-auto-ingest.mts  marginiq-ddis-ingest-background.mts  marginiq-ddis-ingest.mts  marginiq-ddis-week-backfill-background.mts  marginiq-dispute-pdf.mts  marginiq-driver-roster.mts  marginiq-extract-financial-background.mts  marginiq-extract-financials-batch.mts  marginiq-extract-financials-dispatch-background.mts  marginiq-extract-test-background.mts  marginiq-extract-test.mts  (+44 more)
public/: AuditedFinancialsTab.jsx  CustomerAnalysisTab.jsx  DataHubTab.jsx  DriverPerformanceTab.jsx  MarginIQ.jsx  PayrollTab.jsx  QBOImportTab.jsx  TimeClockTab.jsx  UnitEconomicsTab.jsx  deploy.html  index.html  zip3.js
scraper/: .env.example  pyproject.toml
scraper/.github/workflows/: weekly-scrape.yml
scraper/cyberpay/: config.py  firebase_writer.py  models.py  reports.py  session.py
scraper/marginiq/: cli.py
scraper/tests/: test_parsers.py  test_session_live.py
scripts/: check-direct-writes.mjs
(+10 files in other folders)
